# PlotSense

./: .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  NOTICE  README.md  TESTING.md  environment.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.ipynb
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: frontend-tests.yml  python-tests.yml
notebooks/: getting-started.ipynb
plotsense/: __init__.py  exceptions.py
plotsense.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
plotsense/core/: ai_interface.py  utils.py
plotsense/core/enums/: strategy.py
plotsense/core/providers/: anthropic.py  azure_openai.py  base.py  gemini.py  groq.py  groq_openai.py  ollama_openai.py  openai_chat.py  openai_response.py  provider_manager.py
plotsense/core/strategies/: cost_optimized.py  fallback_chain.py  performance_optimized.py  round_robin.py  strategy.py
plotsense/explanations/: __init__.py  explanations.py
plotsense/plot_chat/: __init__.py  action.py  audio.py  chat.py  client.py  file.py  function_calls.py  prompts.py  realtime.py  streaming.py
plotsense/plot_generator/: __init__.py  base_generator.py  basic_generator.py  generator.py  helpers.py  registry.py  smart_generator.py
plotsense/plot_generator/plots/basic/: bar.py  barh.py  box.py  ecdf.py  hexbin.py  hist.py  kde.py  pie.py  scatter.py  violin.py
plotsense/plot_generator/plots/smart/: box.py  ecdf.py  histogram.py  kde.py  scatter.py  violin.py
plotsense/visual_suggestion/: __init__.py  suggestions.py  viz_cache.py
plotsense/visual_suggestion/recommender/: __init__.py  dataframe_analyzer.py  ensemble_scorer.py  prompt_builder.py  response_parser.py  visualization_recommender.py
test/: conftest.py  test_exceptions.py  test_explanations.py  test_plotgen.py  test_suggestions.py
test/live/: live_test_explanations.py  live_test_plotgen.py  live_test_suggestions.py
test/unit/: test_explanations.py  test_plotgen.py  test_suggestions.py
web/: .env.example  generate_plots.py  index.html  package-lock.json  package.json  vitest.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/components/layout/: container.tsx  footer.tsx  header.tsx  homepage-layout.tsx  index.ts  main-layout.tsx  sidebar.tsx
web/src/components/sections/: features-section.tsx  hero-section.tsx  how-it-works-section.tsx  index.ts  simulation-section.tsx  stats-section.tsx
web/src/components/ui/: button.test.tsx  button.tsx  card.test.tsx  card.tsx  error-message.tsx  index.ts  input.tsx  loading-spinner.tsx
web/src/config/: env.ts
web/src/constants/: index.ts
web/src/hooks/: index.ts  use-api.ts  use-file-upload.ts  use-local-storage.ts  use-theme.ts
web/src/styles/: theme.css
web/src/test/: setup.ts  test-utils.tsx
web/src/types/: index.ts
web/src/utils/: analytics.ts  api.ts  format.ts  index.ts  storage.ts  validation.ts
