[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "plotsense"
version = "0.1.3"
description = "An intelligent plotting package with suggestions and explanations"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Christian Chimezie", email = "chimeziechristiancc@gmail.com"},
    {name = "Toluwaleke Ogidan", email = "gbemilekeogidan@gmail.com"},
    {name = "Grace Farayola", email = "gracefarayola@gmail.com"},
    {name = "Amaka Iduwe", email = "nwaamaka_iduwe@yahoo.com"},
    {name = "Nelson Ogbeide", email = "Ogbeide331@gmail.com"},
    {name = "Onyekachukwu Ojumah", email = "Onyekaojumah22@gmail.com"},
    {name = "Olamilekan Ajao", email = "olamilekan011@gmail.com"},
]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "matplotlib>=3.8.0",
    "seaborn>=0.11",
    "pandas>=1.0",
    "numpy>=1.18",
    "python-dotenv",
    "groq",
    "requests",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "flake8>=6.0",
    "autopep8>=2.0",
    "pre-commit",
    "bandit>=1.7",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
]

[project.urls]
Homepage = "https://github.com/christianchimezie/PlotSenseAI"
Documentation = "https://github.com/christianchimezie/PlotSenseAI/blob/main/README.md"
Repository = "https://github.com/christianchimezie/PlotSenseAI"
Issues = "https://github.com/christianchimezie/PlotSenseAI/issues"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["test"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (test component interaction)",
    "e2e: End-to-end tests (test full workflows)",
    "slow: Tests that take significant time to run",
    "api: Tests that make external API calls",
    "requires_api_key: Tests requiring valid API credentials",
    "plotting: Tests that generate visualizations",
]
filterwarnings = [
    "ignore::UserWarning:plotsense.visual_suggestion",
    "ignore::DeprecationWarning:matplotlib",
]

[tool.coverage.run]
source = ["plotsense"]
branch = true
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "setup.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
exclude_dirs = ["test", "tests", "venv", "env", ".venv"]
skips = ["B101", "B601"]
